Day 24/security_group.tf
# Security Group for Application Load Balancer
resource "aws_security_group" "alb_sg" {
    name        = "alb-security-group"
    description = "Security group for Application Load Balancer"
    vpc_id      = aws_vpc.main.id

    ingress {
        description = "HTTP from Internet"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    ingress {
        description = "HTTPS from Internet"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    egress {
        description = "Allow all outbound"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    tags = {
        Name = "alb-security-group"
    }
}

# Security Group for EC2 Instances (App Tier)
resource "aws_security_group" "app_sg" {
    name        = "app-security-group"
    description = "Security group for application instances - only allow traffic from ALB"
    vpc_id      = aws_vpc.main.id

       ingress {
        description     = "HTTP from ALB only"
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        security_groups = [ aws_security_group.alb_sg.id ]
    }

    ingress {
        description     = "HTTPS from ALB only"
        from_port       = 443
        to_port         = 443
        protocol        = "tcp"
        security_groups = [ aws_security_group.alb_sg.id ]
    }

    egress {
        description = "Allow all outbound"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    tags = {
        Name = "app-security-group"
    }
}

# Security Group for SSH access
resource "aws_security_group" "allow_ssh" {
    name        = "allow-ssh"
    description = "Allow SSH access - RESTRICT THIS TO YOUR IP IN PRODUCTION"
    vpc_id      = aws_vpc.main.id

    ingress {
        description = "SSH from anywhere"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    egress {
        description = "Allow all outbound"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "ssh-security-group"
    }
}
